@@ -1,3 +1,9 @@
+2015-10-23  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* auth-source.el: Add eval-and-compile to autoloads for
+	epg-context-set-passphrase-callback, epg-decrypt-string,
+	epg-encrypt-string, and epg-context-set-armor.
+
 2015-10-22  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mailcap.el (mailcap-mime-data): Remove fboundp checks.
